--- a/vertx-lang-js/src/main/asciidoc/enums.adoc
+++ b/vertx-lang-js/src/main/asciidoc/enums.adoc
@@ -131,6 +131,23 @@ For internal usage, don't use it
 +++
 |===
 
+[[DKIMSignAlgorithm]]
+== DKIMSignAlgorithm
+
+++++
+
+ Signing Algorithm specified by DKIM spec.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[RSA_SHA1]]`RSA_SHA1`|-
+|[[RSA_SHA256]]`RSA_SHA256`|-
+|===
+
 [[DnsResponseCode]]
 == DnsResponseCode
 
@@ -417,6 +434,34 @@ Pool name (used in pools domain)
 +++
 |===
 
+[[LoginOption]]
+== LoginOption
+
+++++
+ possible options for a login into a SMTP server
+ <br>
+ either DISABLED, OPTIONAL, REQUIRED or XOAUTH2
+ <p>
+ DISABLED means no login will be attempted
+ <p>
+ NONE means a login will be attempted if the server supports in and login credentials are set
+ <p>
+ REQUIRED means that a login will be attempted if the server supports it and the send operation will fail otherwise
+ <p>
+ XOAUTH2 means that a login will be attempted using Google Gmail Oauth2 tokens
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[DISABLED]]`DISABLED`|-
+|[[NONE]]`NONE`|-
+|[[REQUIRED]]`REQUIRED`|-
+|[[XOAUTH2]]`XOAUTH2`|-
+|===
+
 [[MatchType]]
 == MatchType
 
@@ -431,6 +476,23 @@ Pool name (used in pools domain)
 ^|Name | Description
 |[[EQUALS]]`EQUALS`|-
 |[[REGEX]]`REGEX`|-
+|===
+
+[[MessageCanonic]]
+== MessageCanonic
+
+++++
+
+ Message canonicalization for DKIM.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[SIMPLE]]`SIMPLE`|-
+|[[RELAXED]]`RELAXED`|-
 |===
 
 [[MetricsDomain]]
@@ -471,6 +533,22 @@ Verticle metrics.
 +++
 |===
 
+[[MySQLSetOption]]
+== MySQLSetOption
+
+++++
+ MySQL set options which can be used by link.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[MYSQL_OPTION_MULTI_STATEMENTS_ON]]`MYSQL_OPTION_MULTI_STATEMENTS_ON`|-
+|[[MYSQL_OPTION_MULTI_STATEMENTS_OFF]]`MYSQL_OPTION_MULTI_STATEMENTS_OFF`|-
+|===
+
 [[OAuth2FlowType]]
 == OAuth2FlowType
 
@@ -483,9 +561,76 @@ Verticle metrics.
 [frame="topbot"]
 |===
 ^|Name | Description
-|[[AUTH_CODE]]`AUTH_CODE`|-
-|[[CLIENT]]`CLIENT`|-
-|[[PASSWORD]]`PASSWORD`|-
+|[[AUTH_CODE]]`AUTH_CODE`|+++
+The authorization code is obtained by using an authorization server
+ as an intermediary between the client and resource owner.  Instead of
+ requesting authorization directly from the resource owner, the client
+ directs the resource owner to an authorization server (via its
+ user-agent as defined in [RFC2616]), which in turn directs the
+ resource owner back to the client with the authorization code.
+ <p>
+ Before directing the resource owner back to the client with the
+ authorization code, the authorization server authenticates the
+ resource owner and obtains authorization.  Because the resource owner
+ only authenticates with the authorization server, the resource
+ owner's credentials are never shared with the client.
+ <p>
+ The authorization code provides a few important security benefits,
+ such as the ability to authenticate the client, as well as the
+ transmission of the access token directly to the client without
+ passing it through the resource owner's user-agent and potentially
+ exposing it to others, including the resource owner.
++++
+|[[IMPLICIT]]`IMPLICIT`|+++
+The implicit grant is a simplified authorization code flow optimized
+ for clients implemented in a browser using a scripting language such
+ as JavaScript.  In the implicit flow, instead of issuing the client
+ an authorization code, the client is issued an access token directly
+ (as the result of the resource owner authorization).  The grant type
+ is implicit, as no intermediate credentials (such as an authorization
+ code) are issued (and later used to obtain an access token).
+ <p>
+ When issuing an access token during the implicit grant flow, the
+ authorization server does not authenticate the client.  In some
+ cases, the client identity can be verified via the redirection URI
+ used to deliver the access token to the client.  The access token may
+ be exposed to the resource owner or other applications with access to
+ the resource owner's user-agent.
+ <p>
+ Implicit grants improve the responsiveness and efficiency of some
+ clients (such as a client implemented as an in-browser application),
+ since it reduces the number of round trips required to obtain an
+ access token.  However, this convenience should be weighed against
+ the security implications of using implicit grants, especially when the
+ authorization code grant type is available.
++++
+|[[PASSWORD]]`PASSWORD`|+++
+The resource owner password credentials (i.e., username and password)
+ can be used directly as an authorization grant to obtain an access
+ token.  The credentials should only be used when there is a high
+ degree of trust between the resource owner and the client (e.g., the
+ client is part of the device operating system or a highly privileged
+ application), and when other authorization grant types are not
+ available (such as an authorization code).
+ <p>
+ Even though this grant type requires direct client access to the
+ resource owner credentials, the resource owner credentials are used
+ for a single request and are exchanged for an access token.  This
+ grant type can eliminate the need for the client to store the
+ resource owner credentials for future use, by exchanging the
+ credentials with a long-lived access token or refresh token.
++++
+|[[CLIENT]]`CLIENT`|+++
+The client credentials (or other forms of client authentication) can
+ be used as an authorization grant when the authorization scope is
+ limited to the protected resources under the control of the client,
+ or to protected resources previously arranged with the authorization
+ server.  Client credentials are used as an authorization grant
+ typically when the client is acting on its own behalf (the client is
+ also the resource owner) or is requesting access to protected
+ resources based on an authorization previously arranged with the
+ authorization server.
++++
 |[[AUTH_JWT]]`AUTH_JWT`|+++
 RFC7523
 +++
@@ -763,6 +908,98 @@ The realm is a Shiro LDAP auth provider
 +++
 |===
 
+[[SslMode]]
+== SslMode
+
+++++
+ This parameter specifies the desired security state of the connection to the server.
+ More information can be found in <a href="https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-mode">MySQL Reference Manual</a>
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[DISABLED]]`DISABLED`|+++
+establish an unencrypted connection.
++++
+|[[PREFERRED]]`PREFERRED`|+++
+establish an encrypted connection if the server supports encrypted connections, falling back to an unencrypted connection if an encrypted connection cannot be established.
++++
+|[[REQUIRED]]`REQUIRED`|+++
+establish an encrypted connection if the server supports encrypted connections. The connection attempt fails if an encrypted connection cannot be established.
++++
+|[[VERIFY_CA]]`VERIFY_CA`|+++
+Like REQUIRED, but additionally verify the server Certificate Authority (CA) certificate against the configured CA certificates. The connection attempt fails if no valid matching CA certificates are found.
++++
+|[[VERIFY_IDENTITY]]`VERIFY_IDENTITY`|+++
+Like VERIFY_CA, but additionally perform host name identity verification by checking the host name the client uses for connecting to the server against the identity in the certificate that the server sends to the client.
++++
+|===
+
+[[SslMode]]
+== SslMode
+
+++++
+ The different values for the sslmode parameter provide different levels of
+ protection. See more information in <a href=
+ "https://www.postgresql.org/docs/current/libpq-ssl.html#LIBPQ-SSL-PROTECTION">Protection
+ Provided in Different Modes</a>.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[DISABLE]]`DISABLE`|+++
+only try a non-SSL connection.
++++
+|[[ALLOW]]`ALLOW`|+++
+first try a non-SSL connection; if that fails, try an SSL connection.
++++
+|[[PREFER]]`PREFER`|+++
+first try an SSL connection; if that fails, try a non-SSL connection.
++++
+|[[REQUIRE]]`REQUIRE`|+++
+only try an SSL connection. If a root CA file is present, verify the certificate in the same way as if verify-ca was specified.
++++
+|[[VERIFY_CA]]`VERIFY_CA`|+++
+only try an SSL connection, and verify that the server certificate is issued by a trusted certificate authority (CA).
++++
+|[[VERIFY_FULL]]`VERIFY_FULL`|+++
+only try an SSL connection, verify that the server certificate is issued by a trusted CA and that the requested server host name matches that in the certificate.
++++
+|===
+
+[[StartTLSOptions]]
+== StartTLSOptions
+
+++++
+ possible options for a secure connection using TLS
+ <br>
+ either DISABLED, OPTIONAL or REQUIRED
+ <p>
+ DISABLED means STARTTLS will not be used in any case
+ <p>
+ OPTIONS means STARTTLS will be used if the server supports it and a plain connection will be used otherwise
+ please note that this option is not a secure as it seems since a MITM attacker can remove the STARTTLS line
+ from the capabilities reply.
+ <p>
+ REQUIRED means that STARTTLS will be used if the server supports it and the send operation will fail otherwise
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[DISABLED]]`DISABLED`|-
+|[[OPTIONAL]]`OPTIONAL`|-
+|[[REQUIRED]]`REQUIRED`|-
+|===
+
 [[Status]]
 == Status
 
@@ -872,5 +1109,37 @@ Long-polling using <a hred="https://secure.wikimedia.org/wikipedia/en/wiki/XMLHt
 |[[V07]]`V07`|-
 |[[V08]]`V08`|-
 |[[V13]]`V13`|-
+|===
+
+[[WriteOption]]
+== WriteOption
+
+++++
+ Enum representing the mongoDB Java Driver's link
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[ACKNOWLEDGED]]`ACKNOWLEDGED`|+++
+
++++
+|[[UNACKNOWLEDGED]]`UNACKNOWLEDGED`|+++
+
++++
+|[[FSYNCED]]`FSYNCED`|+++
+
++++
+|[[JOURNALED]]`JOURNALED`|+++
+
++++
+|[[REPLICA_ACKNOWLEDGED]]`REPLICA_ACKNOWLEDGED`|+++
+
++++
+|[[MAJORITY]]`MAJORITY`|+++
+
++++
 |===
 
